--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "heroku": "^7.60.2",
     "prisma": "^4.0.0"
   }
 }
