commit - teste novo banco

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/server.js"
   },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,4 +22,5 @@
     "pg": "^8.7.3",
     "prisma": "^4.0.0"
   }
+  
 }
