--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "heroku": "^7.60.2",
     "pg": "^8.7.3",
     "prisma": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
   }
-  
 }
