--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "heroku": "^7.60.2",
     "pg": "^8.7.3",
-    "prisma": "^4.0.0"
+    "prisma": "^4.0.0",
+    "validate-phone-number-node-js": "^0.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
