--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "heroku": "^7.60.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0",
     "pg": "^8.7.3",
     "prisma": "^4.0.0"
   },
