--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.3",
@@ -27,7 +28,7 @@
     "express-async-errors": "^3.1.1",
     "heroku": "^7.60.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "^6.9.2",
     "pg": "^8.7.3",
     "prisma": "^4.0.0",
     "validate-phone-number-node-js": "^0.0.1"
